--- a/templates/base/skeleton.html
+++ b/templates/base/skeleton.html
@@ -18,6 +18,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#343a40">
+
+    {% load static %}
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
+
     <title>{% block title %}Implicari{% endblock %}</title>
 
     {% block head %}{% endblock %}
