--- a/questions/templates/questions/question_form.html
+++ b/questions/templates/questions/question_form.html
@@ -53,12 +53,10 @@
 
             <div id="editor"></div>
 
-            <br>
-
-            <p>
-                <button class="btn btn-block btn-success">enviar</button>
-                <a href="{{ classroom.get_question_list_url }}" class="btn btn-block btn-outline-secondary">cancelar</a>
-            </p>
+            <div class="mt-4">
+                <button class="btn btn-block btn-sm btn-success">enviar</button>
+                <a href="{{ classroom.get_question_list_url }}" class="btn btn-block btn-sm btn-outline-secondary">cancelar</a>
+            </div>
         </form>
     </div>
 
