--- a/questions/templates/answers/answer_form_content.html
+++ b/questions/templates/answers/answer_form_content.html
@@ -3,7 +3,6 @@
 
 
 <div class="card mt-1">
-    <div class="card-header">Responder</div>
     <form class="card-body py-2 d-flex" method="POST" enctype="multipart/form-data">
 
         {% csrf_token %}
@@ -16,12 +15,12 @@
             {% endthumbnail %}
         </div>
 
-        <div class="pl-2">
+        <div class="pl-2 w-100">
             <p class="mb-2"><small class="font-weight-bold">{{ request.user }}</small></p>
 
             {% bootstrap_form form show_label=False %}
 
-            <button class="btn btn-block btn-outline-success">responder</button>
+            <button class="btn btn-block btn-sm btn-outline-success">responder</button>
         </div>
 
     </form>
