Removed unnecesary files

--- a/classrooms/templates/classrooms/classroom_form.html
+++ b/classrooms/templates/classrooms/classroom_form.html
@@ -20,7 +20,7 @@
 
 {% block header %}
 
-    {% include 'base/header.html' with title='Curso' subtitle='Editar' back_url=back_url %}
+    {% include 'base/header.html' with title=form.instance subtitle='Curso' back_url=back_url %}
 
 {% endblock header %}
 
