--- a/apps/schools/templates/schools/index.html
+++ b/apps/schools/templates/schools/index.html
@@ -64,16 +64,16 @@
 
             <br>
 
-            {% comment %}
             <div class="row">
                 <div class="col-sm-6 mt-1">
-                    <a class="btn btn-lg btn-block btn-outline-dark" href="{% url 'login' %}">iniciar sesión</a>
+                    <a class="btn btn-lg btn-block btn-outline-dark" href="{% url 'signin' %}">iniciar sesión</a>
                 </div>
+            {% comment %}
                 <div class="col-sm-6 mt-1">
                     <a class="btn btn-lg btn-block btn-dark" href="{% url 'signup' %}">registrarse</a>
                 </div>
-            </div>
             {% endcomment %}
+            </div>
 
         </div>
 
