--- a/apps/schools/templates/schools/index.html
+++ b/apps/schools/templates/schools/index.html
@@ -66,7 +66,7 @@
 
             <div class="row">
                 <div class="col-sm-6 mt-1">
-                    <a class="btn btn-lg btn-block btn-outline-dark" href="{% url 'signin' %}">iniciar sesión</a>
+                    <a class="btn btn-lg btn-block btn-outline-dark" href="{% url 'signin' %}">iniciar</a>
                 </div>
             {% comment %}
                 <div class="col-sm-6 mt-1">
