--- a/apps/students/templates/students/student_detail.html
+++ b/apps/students/templates/students/student_detail.html
@@ -46,6 +46,11 @@
                 <small>Apellidos</small>
                 <div class="font-weight-bold">{{ student.last_name|default:'-----' }}</div>
             </div>
+
+            <div class="list-group-item list-group-item-action py-2">
+                <small>RUN</small>
+                <div class="font-weight-bold">{{ student.run|default:'-----' }}</div>
+            </div>
         </div>
     </div>
 
