--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,14 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/fontawesome.css" integrity="sha384-4aon80D8rXCGx9ayDt85LbyUHeMWd3UiBaWliBlJ53yzm9hqN21A+o1pqoyK04h+" crossorigin="anonymous">
 
     <style>
+        html {
+            height: 100%;
+        }
+        
+        body {
+            height: 100%;
+        }
+        
         .sidebar {
             background-color: #fff;
             box-shadow: 0 0 30px #999;
@@ -19,7 +27,7 @@
             height: 100vh;
             left: -100%;
             max-width: 500px;
-            opacity: 0;
+            opacity: 1;
             position: absolute;
             top: 0;
             transition: all .75s ease;
@@ -96,8 +104,34 @@
 
     {% block header %}{% endblock %}
 
-    <div class="container my-4">
-        {% block content %}{% endblock %}
+    <div class="d-flex h-100">
+        <div class="w-25 h-100 p-4 shadow">
+
+            <p>Cursos</p>
+
+            <ul>
+                {% for classroom in classrooms %}
+                    <li>{{ classroom }}</li>
+                {% endfor %}
+            </ul>
+
+            <hr>
+
+            <p>Estudiantes</p>
+
+            <ul>
+
+            </ul>
+
+        </div>
+
+        <div class="w-75">
+
+            <div class="container my-4">
+                {% block content %}{% endblock %}
+            </div>
+        
+        </div>
     </div>
 
     {% if GOOGLE_ADSENSE_ID %}
